--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,13 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
+
+  <header>
+    <div class="container">
+      <span class="title">Game of Life</span>
+    </div>
+  </header>
+
   <app-root>Loading...</app-root>
 </body>
 </html>
